cert-manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ben-knox-dot-com-ingress
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  tls:
  - hosts:
    - ben-knox.com.local
    secretName: ben-knox-dot-com-local-tls-secret
  rules:
    - host: "ben-knox.com.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ben-knox-dot-com-service
                port:
                  number: 3000
